# Blender-Audio-to-shapekeys-animaton

./: .gitignore  Documentation.txt  HorseytimePanel.py  HorseytimePropertys.py  LICENSE  __init__.py  blender_manifest.toml  other apply attempts.txt  printfile.py  pyproject.toml  testing.py
