# pyproject.toml
[project]
name = ""
version = "1.0.0"
requires-python = "==3.11.*"

[tool.peeler.manifest]
blender_version_min = "4.2.0"
id = "my_awesome_add_on"
license = ["SPDX:0BSD"]
maintainer = "John Smith"
tagline = "My Add-on is awesome"

dependencies = [
    "allosaurus==1.0.2",
    "editdistance==0.8.1",
    "editdistance==0.8.1",
    "editdistance==0.8.1",
    "filelock==3.16.0",
    "fsspec==2024.9.0",
    "jinja2==3.1.4",
    "llvmlite==0.43.0",
    "llvmlite==0.43.0",
    "llvmlite==0.43.0",
    "MarkupSafe==2.1.5",
    "MarkupSafe==2.1.5",
    "MarkupSafe==2.1.5",
    "mpmath==1.3.0",
    "munkres==1.1.4",
    "networkx==3.3",
    "numba==0.60.0",
    "numba==0.60.0",
    "numba==0.60.0",
    "numpy==2.0.2",
    "numpy==2.0.2",
    "numpy==2.0.2",
    "nvidia_cublas_cu12==12.1.3.1",
    "nvidia_cuda_cupti_cu12==12.1.105",
    "nvidia_cuda_nvrtc_cu12==12.1.105",
    "nvidia_cuda_runtime_cu12==12.1.105",
    "nvidia_cudnn_cu12==9.1.0.70",
    "nvidia_cufft_cu12==11.0.2.54",
    "nvidia_curand_cu12==10.3.2.106",
    "nvidia_cusolver_cu12==11.4.5.107",
    "nvidia_cusparse_cu12==12.1.0.106",
    "nvidia_nccl_cu12==2.20.5",
    "nvidia_nvjitlink_cu12==12.6.68",
    "nvidia_nvtx_cu12==12.1.105",
    "panphon==0.21.2",
    "pip==24.2",
    "PyYAML==6.0.2",
    "PyYAML==6.0.2",
    "PyYAML==6.0.2",
    "regex==2024.9.11",
    "regex==2024.9.11",
    "regex==2024.9.11",
    "resampy==0.4.3",
    "scipy==1.14.1",
    "scipy==1.14.1",
    "scipy==1.14.1",
    "setuptools==74.1.2",
    "setuptools==75.1.0",
    "sympy==1.13.2",
    "torch==2.2.2",
    "torch==2.4.1",
    "torch==2.4.1",
    "triton==3.0.0",
    "typing_extensions==4.12.2",
    "unicodecsv==0.14.1",
    "wheel==0.44.0",
]